.css file modified

--- a/tourism.css
+++ b/tourism.css
@@ -84,7 +84,7 @@
     color: #0f0e46;
     font-family: "Roboto";
     font-size: 23px;
-    font-weight: bold;
+    font-weight: 700;
   }
   .detailed-view-card-description {
     color: #6c6b70;
